Fixing categories wrap issue in tab flat

--- a/admin/assets/less/mura-grid.less
+++ b/admin/assets/less/mura-grid.less
@@ -616,7 +616,7 @@
 			padding: 0;
 			margin: 0 .5em .35em 0;
 			font-size: 11px;
-			//white-space: nowrap;
+			white-space: nowrap;
 			
 				&:after {
 				content: "/";
@@ -627,9 +627,10 @@
 				content: "";
 				}
 				
-				&.created { white-space: nowrap; }
+				&.categories { white-space: normal; }
 			}
 		}
+
 		
 		.thumbnail {
 			float: left;
